--- a/course/knowl/xref/TwoPiecewiseFunctions.html
+++ b/course/knowl/xref/TwoPiecewiseFunctions.html
@@ -19,7 +19,7 @@
 </head>
 <body class="ignore-math">
 <figure class="figure figure-like"><div class="sidebyside"><div class="sbsrow" style="margin-left:1.666666666666667%;margin-right:1.666666666666667%;grid-template-columns:31.0344827586207% 31.0344827586207% 31.0344827586207%;column-gap:3.333333333333333%;">
-<div class="sbspanel sbspanel--top top" style=""><img src="generated/latex-image/TwoPiecewiseFunctions-2-1.svg" role="img" class="contained"></div>
+<div class="sbspanel sbspanel--top top" style=""><img src="generated/latex-image/TwoPiecewiseFunctions-2-1.svg" role="img" class="contained" alt="Three side-by-side coordinate graphs. Left: a piecewise linear graph labeled g(x). For x less than zero, a rising line approaches an open circle at (0, 1). For x greater than or equal to zero, a descending line begins at a filled point at (0, 0). Middle: a piecewise linear graph labeled f(x). For x less than or equal to zero, a rising line ends at a filled point at (0, 2). For x greater than zero, a descending line begins at an open circle at (0, 1). Right: a blank coordinate grid with labeled x- and y-axes."></div>
 <div class="sbspanel sbspanel--top top" style=""><img src="generated/latex-image/TwoPiecewiseFunctions-2-2.svg" role="img" class="contained"></div>
 <div class="sbspanel sbspanel--top top" style=""><img src="generated/latex-image/TwoPiecewiseFunctions-2-3.svg" role="img" class="contained"></div>
 </div></div>
