--- a/course/knowl/xref/figureImplicitGraph1.html
+++ b/course/knowl/xref/figureImplicitGraph1.html
@@ -18,10 +18,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;">
-<img src="external/ImplicitGraph1.jpg" class="contained" alt="described in detail following the image" aria-describedby="figureImplicitGraph1-2-description"><details class="image-description" aria-live="polite"><summary title="details"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe88e;</span></summary><div id="figureImplicitGraph1-2-description">Graph of the curve <span class="process-math">\(x^3 + x^2y+2y^2=2\)</span> with a tangent line at <span class="process-math">\((1,0.5)\text{.}\)</span>
-</div></details>
-</div>
+<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/ImplicitGraph1.jpg" class="contained" alt="A coordinate graph showing two curves. One curve is drawn in black and forms a closed, rounded shape extending approximately from y equals minus 1 to y equals 1, with its rightmost point near x equals 1.2. A straight blue line slopes downward from left to right, starting near y equals 1.5 at x equals 0 and crossing the black curve near x equals 1 and y equals 0.5. The x- and y-axes are shown with dotted grid lines and tick marks at regular intervals."></div>
 <figcaption><span class="type">Figure</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber">60<span class="period heading-divison-mark heading-divison-mark__period">.</span></span><span class="space heading-divison-mark heading-divison-mark__space"> </span>Graph of the curve <span class="process-math">\(x^3 + x^2y+2y^2=2\)</span> with a tangent line at <span class="process-math">\((1,0.5)\text{.}\)</span><div class="autopermalink" data-description="Figure 60"><a href="#figureImplicitGraph1" title="Copy heading and permalink for Figure 60" aria-label="Copy heading and permalink for Figure 60">🔗</a></div></figcaption></figure><span class="incontext"><a class="internal" href="handouts-16.html#figureImplicitGraph1">in-context</a></span>
 </body>
 </html>
