--- a/course/knowl/xref/figureSignLhopital.html
+++ b/course/knowl/xref/figureSignLhopital.html
@@ -18,9 +18,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;">
-<img src="generated/latex-image/SignLhopitalPic.svg" role="img" class="contained" alt="described in detail following the image" aria-describedby="SignLhopitalPic-description"><details class="image-description" aria-live="polite"><summary title="details"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe88e;</span></summary><div id="SignLhopitalPic-description">The graphs of <span class="process-math">\(f\)</span> and <span class="process-math">\(g\)</span> are shown together.</div></details>
-</div>
+<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="generated/latex-image/SignLhopitalPic.svg" role="img" class="contained" alt="A coordinate graph showing two curves labeled f(x) and g(x). The blue curve f(x) lies above the x-axis near the middle and has a shallow minimum at a point above x equals a, then rises to the left and right. The red curve g(x) lies below the x-axis and has a maximum at the point directly below x equals a. Both curves touch the x-axis at the same point labeled a. The x- and y-axes are shown with arrows."></div>
 <figcaption><span class="type">Figure</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber">63<span class="period heading-divison-mark heading-divison-mark__period">.</span></span><span class="space heading-divison-mark heading-divison-mark__space"> </span>The graph of <span class="process-math">\(f(x)\)</span> and <span class="process-math">\(g(x)\text{.}\)</span><div class="autopermalink" data-description="Figure 63"><a href="#figureSignLhopital" title="Copy heading and permalink for Figure 63" aria-label="Copy heading and permalink for Figure 63">🔗</a></div></figcaption></figure><span class="incontext"><a class="internal" href="handouts-18.html#figureSignLhopital">in-context</a></span>
 </body>
 </html>
